--- a/MicroArcSec.Client/MicroArcSec.Client.csproj
+++ b/MicroArcSec.Client/MicroArcSec.Client.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.7.0" />
     <PackageReference Include="YamlDotNet" Version="13.0.1" />
