--- a/MicroArcSec.Client/Files/sample.yaml
+++ b/MicroArcSec.Client/Files/sample.yaml
@@ -1,7 +1,8 @@
 id: '1'
-title: Windows PowerShell Script Block Logging - Multiple Script Blocks with Empty Script Block Text
-description: Detects multiple script blocks with empty script block text in Windows PowerShell script block logs, which may indicate an obfuscation technique.
+title: Multiple Script Blocks with Empty Script Block Text
+description: Detects multiple script blocks with empty script block text in Windows PowerShell script block logs.
 status: experimental
+date: 2023-03-01 11:45:23
 logsource:
       category: process_creation
 detection:
