--- a/MicroArcSec.Client/MicroArcSec.Client.csproj
+++ b/MicroArcSec.Client/MicroArcSec.Client.csproj
@@ -41,6 +41,15 @@
     <Resource Include="Files\sample01.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>	
+	
+  <ItemGroup>
+    <Content Update="wwwroot\images\bizhan.jpeg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\mina.jpeg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
